{
    "name": "CameraControlInput",
    "maps": [
        {
            "name": "EditingCam",
            "id": "339d89dc-af4e-454c-824a-9d42a7439508",
            "actions": [
                {
                    "name": "Pan",
                    "type": "Button",
                    "id": "445279c8-1103-40b6-8eb5-6bf02ce1693a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2,pressPoint=0.2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "6c8cc3da-4f1f-444f-99bd-cd8cb3787ba5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2,pressPoint=0.2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "8fe61c4c-e66f-4f96-b243-cd73647ae4f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "179beba4-310c-4301-b2e4-8edc346d858c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InputMove",
                    "type": "Value",
                    "id": "f778c90b-4e68-408e-b8a1-3a45e8dfcd18",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InputScreenPositioning",
                    "type": "Value",
                    "id": "4159caa8-ab50-41c0-8ebf-ecf457b0d78c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1f6c7206-271b-4378-8f8b-a642d0818436",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b71182b-9ae1-421e-8ded-ac7b8b263735",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f933c79-c0ba-4abe-b380-b2bdd2767de1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab088f68-fb2d-461e-9b8a-c6851451a59d",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d65f3824-a063-4433-97e0-a7a52dca3670",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ba246b6-36c3-462c-b50d-810017d7721d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputScreenPositioning",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}